Menu fixed report on bug phase

--- a/HTML/Beverages.html
+++ b/HTML/Beverages.html
@@ -30,30 +30,63 @@
     <main id="main-content">
         <section class="category-header">
             <a href="../HTML/Menu.html" class="back-link">&larr; Back to Menu</a>
-            <h2>Beverages</h2>
+            <h2>Beverages & Arguile</h2>
             <p class="category-description">Refreshing drinks to quench your thirst</p>
         </section>
 
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
+                <h3>Water (small - big)</h3>
+                <p class="price">$0.65 - $1.25</p>
+            </article>
+            <article class="menu-item">
+                <h3>Sparkling Water</h3>
+                <p class="price">$2</p> 
+            </article>
+            <article class = "menu-item">
+                <h3>Juice</h3>
+                <p class="price">$0.50</p>
+            </article>
+            <article class="menu-item">
                 <h3>Soft Drinks</h3>
-                <p>Selection of cold sodas and juices. Small, Medium, Large.</p>
-                <p class="price">$2 - $4</p>
+                <p>Selection of cold sodas</p>
+                <p class="price">$1</p>
             </article>
             <article class="menu-item">
                 <h3>Iced Tea</h3>
-                <p>Refreshing iced tea with lemon. Freshly brewed daily.</p>
-                <p class="price">$3</p>
+                <p class="price">$1</p>
             </article>
             <article class="menu-item">
-                <h3>Fresh Lemonade</h3>
-                <p>Homemade lemonade with fresh lemons and a hint of mint.</p>
+                <h3>Almaza Beer</h3>
+                <p>Served with nuts & carrots</p>
                 <p class="price">$4</p>
             </article>
             <article class="menu-item">
-                <h3>Smoothies</h3>
-                <p>Fresh fruit smoothies available in various flavors.</p>
+                <h3>Mexican Beer</h3>
+                <p>Served with nuts & carrots</p>
+                <p class="price">$4.50</p>
+            </article>
+            <article class= "menu-item">
+                <h3>Ahwe fenjen</h3>
+                <p class="price">$0.50</p>
+            </article>
+            <article class="menu-item">
+                <h3>Nescafe</h3>
+                <p class="price">$1</p>
+            </article>
+            <article class="menu-item">
+                <h3>Tea</h3>
+                <p class="price">$1</p>
+            </article>
+            <article class="menu-item">
+                <h3>Alcoholic Beverages</h3>
+                <p>Ask for the available brands and prices.</p>
+            </article>
+            <article class="menu-item">
+                <h3>Hookah</h3>
                 <p class="price">$5</p>
+                <h3>Extra Rass</h3>
+                <p class="price">$1</p>
             </article>
         </section>
     </main>
