--- a/HTML/Desserts.html
+++ b/HTML/Desserts.html
@@ -36,26 +36,17 @@
 
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
-                <h3>Chocolate Cake</h3>
-                <p>Rich, moist chocolate cake with chocolate frosting.</p>
-                <p class="price">$5</p>
+                <h3>Nutella Rolls</h3>
+                <p class="price">$3</p>
             </article>
             <article class="menu-item">
-                <h3>Cheesecake</h3>
-                <p>Creamy New York style cheesecake with berry topping.</p>
-                <p class="price">$6</p>
-            </article>
-            <article class="menu-item">
-                <h3>Brownies</h3>
-                <p>Fudgy brownies topped with powdered sugar.</p>
+                <h3>Choco Cheese Rolls</h3>
                 <p class="price">$4</p>
             </article>
             <article class="menu-item">
-                <h3>Ice Cream</h3>
-                <p>Selection of premium ice cream flavors.</p>
+                <h3>Chocoba</h3>
                 <p class="price">$4</p>
             </article>
-        </section>
     </main>
 
     <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." 
