--- a/HTML/Extras.html
+++ b/HTML/Extras.html
@@ -36,29 +36,48 @@
 
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
-                <h3>Extra Sauce</h3>
-                <p>Choice of house sauce, BBQ, ranch, or spicy mayo.</p>
+                <h3>Mozzarella Cheese</h3>
                 <p class="price">$0.50</p>
             </article>
             <article class="menu-item">
-                <h3>Cheese</h3>
-                <p>Additional cheese slice (cheddar, mozzarella, or Swiss).</p>
-                <p class="price">$0.75</p>
+                <h3>Cheddar Cup</h3>
+                <p class="price">$1</p>
             </article>
             <article class="menu-item">
-                <h3>Bacon Strips</h3>
-                <p>Crispy bacon strips to add to any meal.</p>
+                <h3>BBQ Sauce</h3>
+                <p class="price">$0.30</p>
+            </article>
+            <article class="menu-item">
+                <h3>Mayo Cup</h3>
+                <p class="price">$0.30</p>
+            </article>
+            <article class="menu-item">
+                <h3>Cocktail Sauce</h3>
+                <p class="price">$0.30</p>
+            </article>
+            <article class="menu-item">
+                <h3>Garlic Sauce</h3>
+                <p class="price">$0.30</p>
+            </article>
+            <article class="menu-item">
+                <h3>Beef Patty</h3>
                 <p class="price">$2</p>
             </article>
             <article class="menu-item">
-                <h3>Avocado</h3>
-                <p>Fresh sliced avocado.</p>
+                <h3>Fried or Grilled Chicken Patty</h3>
+                <p class="price">$1</p>
+            </article>
+            <article class="menu-item">
+                <h3>Mozzarella Patty</h3>
                 <p class="price">$1.50</p>
             </article>
             <article class="menu-item">
-                <h3>Extra Vegetables</h3>
-                <p>Lettuce, tomato, onion, pickles, or peppers.</p>
-                <p class="price">$0.50</p>
+                <h3>Nuts</h3>
+                <p class="price">$2</p>
+            </article>
+            <article class="menu-item">
+                <h3>Carrots</h3>
+                <p class="price">$2</p>
             </article>
         </section>
     </main>
