--- a/HTML/Platters.html
+++ b/HTML/Platters.html
@@ -36,19 +36,19 @@
 
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
-                <h3>Mixed Grill Platter</h3>
-                <p>Assorted grilled meats served with rice and vegetables. Serves 2-3.</p>
-                <p class="price">$25</p>
+                <h3>Tawouk Platter</h3>
+                <p>Double portion chicken, coleslaw, pickles, garlic sauce, and fries</p>
+                <p class="price">$9</p>
             </article>
             <article class="menu-item">
-                <h3>Seafood Platter</h3>
-                <p>Selection of fresh seafood with lemon butter sauce and side salad. Serves 2-3.</p>
-                <p class="price">$28</p>
+                <h3>Crispy Platter</h3>
+                <p>5 fried chicken crispy, BBQ sauce, cheddar sauce, pickles, fries, and coleslaw.</p>
+                <p class="price">$10</p>
             </article>
             <article class="menu-item">
-                <h3>Veggie Feast Platter</h3>
-                <p>Assorted roasted vegetables, grains, and plant-based proteins. Serves 2-3.</p>
-                <p class="price">$20</p>
+                <h3>Beef Burger Platter</h3>
+                <p>2 beef patties, tomato, cocktail sauce, coleslaw, pickles, and fries.</p>
+                <p class="price">$12</p>
             </article>
         </section>
     </main>
