--- a/HTML/Salads.html
+++ b/HTML/Salads.html
@@ -36,19 +36,18 @@
 
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
-                <h3>Garden Salad</h3>
-                <p>Mixed greens with fresh vegetables and house dressing.</p>
-                <p class="price">$7</p>
-            </article>
-            <article class="menu-item">
-                <h3>Caesar Salad</h3>
-                <p>Crisp romaine lettuce, parmesan, croutons, and creamy Caesar dressing.</p>
+                <h3>Chicken Ceaser Salad</h3>
+                <p>Iceberg, grilled chicken, cucumber, parmesan, crouton, and mayo dressing.</p>
                 <p class="price">$8</p>
             </article>
             <article class="menu-item">
-                <h3>Grilled Chicken Salad</h3>
-                <p>Garden greens topped with grilled chicken breast and seasonal vegetables.</p>
-                <p class="price">$10</p>
+                <h3>Crab Salad</h3>
+                <p>Crab, iceberg, corn, carrots, cherry tomato, cucumber, and mustard dressing.</p>
+                <p class="price">$8</p>
+            </article>
+            <article class="menu-item">
+                <h3>Fattouch</h3>
+                <p class="price">$7</p>
             </article>
         </section>
     </main>
