--- a/HTML/Sandwiches.html
+++ b/HTML/Sandwiches.html
@@ -36,19 +36,49 @@
 
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
-                <h3>Chicken Sandwich</h3>
-                <p>Grilled chicken breast with lettuce, tomato, and our house sauce.</p>
-                <p class="price">$7</p>
+                <h3>Fahita</h3>
+                <p>Sub bread, marinated grilled chicken breast, green pepper, onions, mozzarella cheese, and cocktail sauce.</p>
+                <p class="price">$6</p>
             </article>
             <article class="menu-item">
-                <h3>Turkey Sandwich</h3>
-                <p>Sliced turkey with Swiss cheese, avocado, and sprouts.</p>
-                <p class="price">$8</p>
+                <h3>Crispy</h3>
+                <p>Sub bread, fried crispy chicken, BBQ sauce, cheddar, mozzarella cheese, pickles, and corn.</p>
+                <p class="price">$6</p>
             </article>
             <article class="menu-item">
-                <h3>Veggie Sandwich</h3>
-                <p>Roasted vegetables with hummus and fresh herbs on whole wheat bread.</p>
-                <p class="price">$7</p>
+                <h3>Francisco</h3>
+                <p>Sub bread, grilled chicken, mozzarella cheese, soya sauce, mayo, corn, and pickles.</p>
+                <p class="price">$5</p>
+            </article>
+            <article class="menu-item">
+                <h3>Chicken Cheddar</h3>
+                <p>Sub bread, grilled chicken, mozzarella cheese, cheddar cheese, pickles, iceberg, and tomato.</p>
+                <p class="price">$5</p>
+            </article>
+            <article class="menu-item">
+                <h3>Philadelphia</h3>
+                <p>Sub bread, marinated meat, green pepper, onions, mozzarella cheese, cream cheese, and mayo sauce.</p>
+                <p class="price">$8.50</p>
+            </article>
+            <article class="menu-item">
+                <h3>Tawouk</h3>
+                <p>Arabic bread, chicken, coleslaw, pickles, garlic sauce, and fries.</p>
+                <p class="price">$4</p>
+            </article>
+            <article class="menu-item">
+                <h3>Makanek</h3>
+                <p>Arabic bread, makanek, mayo sauce, pickles, and tomato.</p>
+                <p class="price">$4</p>
+            </article>
+            <article class="menu-item">
+                <h3>Soujouk</h3>
+                <p>Arabic bread, soujouk, mayo, garlic sauce, pickles, and tomato.</p>
+                <p class="price">$4</p>
+            </article>
+            <article class="menu-item">
+                <h3>Fries Sandwich</h3>
+                <p>Arabic bread, french fries, coleslaw, ketchup, and pickles.</p>
+                <p class="price">$3.50</p>
             </article>
         </section>
     </main>
