--- a/HTML/Wraps.html
+++ b/HTML/Wraps.html
@@ -33,22 +33,11 @@
             <h2>Wraps</h2>
             <p class="category-description">Flavorful wraps filled with fresh ingredients</p>
         </section>
-
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
-                <h3>Chicken Wrap</h3>
-                <p>Grilled chicken with peppers, onions, and creamy sauce in a soft wrap.</p>
+                <h3>Boneless Wrap</h3>
+                <p>Boneless chicken, tortilla bread, mayo, cheddar sauce, barbecue sauce, iceberg, and chips.</p>
                 <p class="price">$8</p>
-            </article>
-            <article class="menu-item">
-                <h3>Veggie Wrap</h3>
-                <p>Roasted vegetables, hummus, and fresh herbs in a spinach wrap.</p>
-                <p class="price">$7</p>
-            </article>
-            <article class="menu-item">
-                <h3>Spicy Shrimp Wrap</h3>
-                <p>Sautéed shrimp with spicy mayo, lettuce, and tomato.</p>
-                <p class="price">$10</p>
             </article>
         </section>
     </main>
