--- a/HTML/Burgers.html
+++ b/HTML/Burgers.html
@@ -36,19 +36,49 @@
 
         <section id="menu-container" class="menu-grid">
             <article class="menu-item">
-                <h3>Classic Burger</h3>
-                <p>Juicy beef patty with lettuce, tomato, and our special sauce.</p>
+                <h3>Classic Beef Burger</h3>
+                <p>Juicy beef patty with lettuce, tomato, pickle,  and cocktail sauce.</p>
+                <p class="price">$5</p>
+            </article>
+            <article class="menu-item">
+                <h3> Classic Chicken Burger</h3>
+                <p>Fried or Grilled chicken breast with lettuce, tomato, pickle, and mayo sauce.</p>
+                <p class="price">$4</p>
+            </article>
+            <article class="menu-item">
+                <h3>Classic Cheese Beef Burger</h3>
+                <p>Beef patty, cheddar slice, lettuce, tomato, pickle, and cocktail sauce.</p>
+                <p class="price">$5.50</p>
+            </article>
+            <article class="menu-item">
+                <h3>Classic Chicken Cheese Burger</h3>
+                <p>Fried or grilled Chicken breast with cheddar slice, lettuce, tomato, pickle, and mayo sauce.</p>
+                <p class="price">$4.50</p>
+            </article>
+            <article class="menu-item">
+                <h3>Mozzarella Beef Burger</h3>
+                <p>Beef patty, mozzarella patty, lettuce, cheddar, and pickle.</p>
                 <p class="price">$8</p>
             </article>
             <article class="menu-item">
-                <h3>Cheese Burger</h3>
-                <p>Beef patty topped with melted cheddar cheese.</p>
-                <p class="price">$9</p>
+                <h3>Mozzarella Chicken Burger</h3>
+                <p>Fried chicken breast, mozzarella patty, lettuce, mayo sauce, tomato, and pickle.</p>
+                <p class="price">$7</p>
             </article>
             <article class="menu-item">
-                <h3>Gourmet Burger</h3>
-                <p>Premium beef patty with caramelized onions, bacon, and Swiss cheese.</p>
-                <p class="price">$12</p>
+                <h3>BBQ Beef Burger</h3>
+                <p>Beef patty, lettuce, mozzarella patty, and BBQ sauce.</p>
+                <p class="price">$8</p>
+            </article>
+            <article class="menu-item">
+                <h3>BBQ Chicken Burger</h3>
+                <p>Fried chicken breast, lettuce, mozzarella patty, and BBQ sauce.</p>
+                <p class="price">$7</p>
+            </article>
+            <article class="menu-item">
+                <h3>Kimos Tasty</h3>
+                <p>Beef patty, lettuce, pickles, tomato, and kimos special sauce.</p>
+                <p class="price">$5</p>
             </article>
         </section>
     </main>
